<resources>
    <string name="app_name">Run Tracker</string>
    <string name="turned_on">GPS is turned on...</string>
    <string name="turned_off">GPS is not turned on...</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="altitude">Altitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="started">Started:</string>
</resources>
